export const snapshot = {};

snapshot[`Mora provider > release lookup > release with GTIN in distPartNo 1`] = `
{
  artists: [
    {
      creditedName: "Ado",
      externalIds: [
        {
          id: "1310625",
          provider: "mora",
          type: "artist",
        },
      ],
      name: "Ado",
    },
  ],
  availableIn: [
    "JP",
  ],
  copyright: "A Virgin Music release; ℗ 2025 UNIVERSAL MUSIC LLC",
  externalLinks: [
    {
      types: [
        "paid download",
      ],
      url: "https://mora.jp/package/43000006/00602488058599/",
    },
  ],
  gtin: "00602488058599",
  images: [
    {
      types: [
        "front",
      ],
      url: "https://cf.mora.jp/contents/package/0000/00000083/0042/023/270/0042023270.200.jpg",
    },
  ],
  info: {
    messages: [],
    providers: [
      {
        apiUrl: "https://cf.mora.jp/contents/package/0000/00000083/0042/023/270/packageMeta.json",
        id: "43000006/00602488058599",
        internalName: "mora",
        lookup: {
          method: "id",
          value: "43000006/00602488058599",
        },
        name: "mora",
        url: "https://mora.jp/package/43000006/00602488058599/",
      },
    ],
  },
  labels: [
    {
      name: "Universal Music LLC",
    },
  ],
  media: [
    {
      format: "Digital Media",
      tracklist: [
        {
          artists: [
            {
              creditedName: "Ado",
              externalIds: [
                {
                  id: "1310625",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Ado",
            },
          ],
          length: 172000,
          number: 1,
          title: "MAGIC",
          type: "audio",
        },
      ],
    },
  ],
  packaging: "None",
  releaseDate: {
    day: 31,
    month: 10,
    year: 2025,
  },
  status: "Official",
  title: "MAGIC",
}
`;

snapshot[`Mora provider > release lookup > release with GTIN in cdPartNo 1`] = `
{
  artists: [
    {
      creditedName: "Various Artists",
      externalIds: [
        {
          id: "15340",
          provider: "mora",
          type: "artist",
        },
      ],
      name: "Various Artists",
    },
  ],
  availableIn: [
    "JP",
  ],
  copyright: "(P)2025 BUSHIROAD MUSIC INC.",
  externalLinks: [
    {
      types: [
        "paid download",
      ],
      url: "https://mora.jp/package/43000035/198704758065_F/",
    },
  ],
  gtin: "198704758065",
  images: [
    {
      types: [
        "front",
      ],
      url: "https://cf.mora.jp/contents/package/0000/00000013/0041/921/939/0041921939.200.jpg",
    },
  ],
  info: {
    messages: [],
    providers: [
      {
        apiUrl: "https://cf.mora.jp/contents/package/0000/00000013/0041/921/939/packageMeta.json",
        id: "43000035/198704758065_F",
        internalName: "mora",
        lookup: {
          method: "id",
          value: "43000035/198704758065_F",
        },
        name: "mora",
        url: "https://mora.jp/package/43000035/198704758065_F/",
      },
    ],
  },
  labels: [
    {
      name: "ブシロードミュージック",
    },
  ],
  media: [
    {
      format: "Digital Media",
      tracklist: [
        {
          artists: [
            {
              creditedName: "Poppin'Party",
              externalIds: [
                {
                  id: "2027483",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Poppin'Party",
            },
          ],
          length: 256000,
          number: 1,
          title: "心絵 (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "Poppin'Party",
              externalIds: [
                {
                  id: "2027483",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Poppin'Party",
            },
          ],
          length: 188000,
          number: 2,
          title: "ちゅ、多様性。 (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "Poppin'Party",
              externalIds: [
                {
                  id: "2027483",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Poppin'Party",
            },
          ],
          length: 232000,
          number: 3,
          title: "フィクション (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "Afterglow",
              externalIds: [
                {
                  id: "2027484",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Afterglow",
            },
          ],
          length: 233000,
          number: 4,
          title: "カゲロウデイズ (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "Afterglow",
              externalIds: [
                {
                  id: "2027484",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Afterglow",
            },
          ],
          length: 217000,
          number: 5,
          title: "Bunny Girl (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "Afterglow",
              externalIds: [
                {
                  id: "2027484",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Afterglow",
            },
          ],
          length: 235000,
          number: 6,
          title: "オレンジ (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "Pastel*Palettes",
              externalIds: [
                {
                  id: "2027485",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Pastel*Palettes",
            },
          ],
          length: 215000,
          number: 7,
          title: "サインはB (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "Pastel*Palettes",
              externalIds: [
                {
                  id: "2027485",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Pastel*Palettes",
            },
          ],
          length: 230000,
          number: 8,
          title: "だから、ひとりじゃない (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "Pastel*Palettes",
              externalIds: [
                {
                  id: "2027485",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Pastel*Palettes",
            },
          ],
          length: 191000,
          number: 9,
          title: "最上級にかわいいの！ (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "Roselia",
              externalIds: [
                {
                  id: "2027487",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Roselia",
            },
          ],
          length: 220000,
          number: 10,
          title: "ファタール (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "Roselia",
              externalIds: [
                {
                  id: "2027487",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Roselia",
            },
          ],
          length: 205000,
          number: 11,
          title: "ヒバナ -Reloaded- (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "Roselia",
              externalIds: [
                {
                  id: "2027487",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Roselia",
            },
          ],
          length: 238000,
          number: 12,
          title: "Reweave (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "Poppin'Party, 高松 燈(CV:羊宮妃那)",
              externalIds: [
                {
                  id: "2255981",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Poppin'Party, 高松 燈(CV:羊宮妃那)",
            },
          ],
          length: 275000,
          number: 13,
          title: "幾億光年 (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "Pastel*Palettes, 美竹 蘭(CV:佐倉綾音)",
              externalIds: [
                {
                  id: "2255982",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Pastel*Palettes, 美竹 蘭(CV:佐倉綾音)",
            },
          ],
          length: 222000,
          number: 14,
          title: "愛包ダンスホール (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "ハロー、ハッピーワールド！",
              externalIds: [
                {
                  id: "2027488",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "ハロー、ハッピーワールド！",
            },
          ],
          length: 226000,
          number: 15,
          title: "最高到達点 (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "ハロー、ハッピーワールド！",
              externalIds: [
                {
                  id: "2027488",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "ハロー、ハッピーワールド！",
            },
          ],
          length: 135000,
          number: 16,
          title: "強風オールバック (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "ハロー、ハッピーワールド！",
              externalIds: [
                {
                  id: "2027488",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "ハロー、ハッピーワールド！",
            },
          ],
          length: 160000,
          number: 17,
          title: "はいよろこんで (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "Morfonica",
              externalIds: [
                {
                  id: "2013168",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Morfonica",
            },
          ],
          length: 273000,
          number: 18,
          title: "輪舞-revolution (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "Morfonica",
              externalIds: [
                {
                  id: "2013168",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Morfonica",
            },
          ],
          length: 145000,
          number: 19,
          title: "QUEEN (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "Morfonica",
              externalIds: [
                {
                  id: "2013168",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Morfonica",
            },
          ],
          length: 250000,
          number: 20,
          title: "again (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "RAISE A SUILEN",
              externalIds: [
                {
                  id: "2027489",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "RAISE A SUILEN",
            },
          ],
          length: 168000,
          number: 21,
          title: "Bling-Bang-Bang-Born (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "RAISE A SUILEN",
              externalIds: [
                {
                  id: "2027489",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "RAISE A SUILEN",
            },
          ],
          length: 193000,
          number: 22,
          title: "第六感 (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "MyGO!!!!!",
              externalIds: [
                {
                  id: "2007263",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "MyGO!!!!!",
            },
          ],
          length: 188000,
          number: 23,
          title: "雑踏、僕らの街 (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "MyGO!!!!!",
              externalIds: [
                {
                  id: "2007263",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "MyGO!!!!!",
            },
          ],
          length: 249000,
          number: 24,
          title: "遥か彼方 (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "MyGO!!!!!",
              externalIds: [
                {
                  id: "2007263",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "MyGO!!!!!",
            },
          ],
          length: 236000,
          number: 25,
          title: "だれかの心臓になれたなら (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "Roselia, レイヤ(CV:Raychell)",
              externalIds: [
                {
                  id: "2255983",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "Roselia, レイヤ(CV:Raychell)",
            },
          ],
          length: 227000,
          number: 26,
          title: "悪魔の子 (Cover)",
          type: "audio",
        },
        {
          artists: [
            {
              creditedName: "ハロー、ハッピーワールド！, 倉田ましろ(CV:進藤あまね)",
              externalIds: [
                {
                  id: "2255984",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "ハロー、ハッピーワールド！, 倉田ましろ(CV:進藤あまね)",
            },
          ],
          length: 202000,
          number: 27,
          title: "シカ色デイズ (Cover)",
          type: "audio",
        },
      ],
    },
  ],
  packaging: "None",
  releaseDate: {
    day: 15,
    month: 10,
    year: 2025,
  },
  status: "Official",
  title: "バンドリ！ ガールズバンドパーティ！ カバーコレクションVol.10",
}
`;

snapshot[`Mora provider > release lookup > video release 1`] = `
{
  artists: [
    {
      creditedName: "The Last Dinner Party",
      externalIds: [
        {
          id: "1739884",
          provider: "mora",
          type: "artist",
        },
      ],
      name: "The Last Dinner Party",
    },
  ],
  availableIn: [
    "JP",
  ],
  copyright: "© 2025 The Last Dinner Party, under exclusive licence to Universal Music Operations Limited",
  externalLinks: [
    {
      types: [
        "paid download",
      ],
      url: "https://mora.jp/package/43000006/00199957093194/",
    },
  ],
  gtin: "00199957093194",
  images: [
    {
      types: [
        "front",
      ],
      url: "https://cf.mora.jp/contents/package/0000/00000083/0042/738/339/0042738339.200.jpg",
    },
  ],
  info: {
    messages: [],
    providers: [
      {
        apiUrl: "https://cf.mora.jp/contents/package/0000/00000083/0042/738/339/packageMeta.json",
        id: "43000006/00199957093194",
        internalName: "mora",
        lookup: {
          method: "id",
          value: "43000006/00199957093194",
        },
        name: "mora",
        url: "https://mora.jp/package/43000006/00199957093194/",
      },
    ],
  },
  labels: [
    {
      name: "Universal-Island Records Ltd.",
    },
  ],
  media: [
    {
      format: "Digital Media",
      tracklist: [
        {
          artists: [
            {
              creditedName: "The Last Dinner Party",
              externalIds: [
                {
                  id: "1739884",
                  provider: "mora",
                  type: "artist",
                },
              ],
              name: "The Last Dinner Party",
            },
          ],
          length: 239000,
          number: 1,
          title: "Woman is a Tree",
          type: "video",
        },
      ],
    },
  ],
  packaging: "None",
  releaseDate: {
    day: 22,
    month: 11,
    year: 2025,
  },
  status: "Official",
  title: "Woman is a Tree",
}
`;
